# Youtube-Audio-Downloader

./: .gitignore  pyproject.toml
youtube_audio_downloader/: __init__.py  config.py  downloader.py  exceptions.py  filesystem_manager.py  result.py  url_manager.py  ytdlp_manager.py
