[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-audio-downloader"
version = "0.1.0"
authors = [
  { name="Andre Koraleski", email="andrekorale@gmail.com" },
]

description = "A configurable library to download audio and subtitles from YouTube videos."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "yt-dlp==2025.9.5"
]

[project.urls]
"Homepage" = "https://github.com/andrekoraleski/youtube-downloader"

